Tue Jun  1 16:37:30 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/OS_NS_Thread.cpp: Added a cast for (ACE_TSS_DESTRUCTOR)
	  so the code will compile properly on Solaris when
 	  ACE_HAS_TSS_EMULATION is enabled.  Thanks to Kevin Christian
 	  <khchristian@att.com> for reporting this.

Tue Jun  1 16:56:39 2004  Steve Huston  <shuston@riverace.com>

	* tests/MT_Reference_Counted_Event_Handler_Test.cpp: Changed use of
	  SHUT_RDWR arg for ACE_OS::shutdown() to ACE_SHUTDOWN_BOTH, which is
	  set up correctly across all platforms. Fixes compile error on
	  Windows.

	* ace/SOCK.h:
	* ace/OS_NS_sys_socket.h: Moved the setup of ACE_SHUTDOWN_READ,
	  ACE_SHUTDOWN_WRITE, and ACE_SHUTDOWN_BOTH from SOCK.h to
	  OS_NS_sys_socket.h. There's no need to include SOCK.h to use
	  the lower-level ACE_OS::shutdown() directly.

Sat May 29 16:12:28 2004  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_lynxos.GNU:

          Added X11 related libs needed to build XtReactor.
        
Fri May 28 18:35:41 2004  Steve Huston  <shuston@riverace.com>

        * tests/FIFO_Test.cpp (server): The select() trick to wait for the
          writer to open the FIFO doesn't seem to work on AIX. It seems to
          select() the fifo handle as a normal file handle, always readable.
          So on AIX, sleep 1 second before proceeding.

Fri May 28 15:54:26 2004  Steve Huston  <shuston@riverace.com>

        * tests/MT_Reference_Counted_Event_Handler_Test.cpp: In
          Close_Socket_Thread::svc(), do a ACE_OS::shutdown() before closing
          the socket. This is enough to pop another thread off a blocked
          read/write on platforms that block the close() until an in-progress
          operation completes, such as AIX and Linux. With this, remove the
          #if linux checks that disabled some types of test.
          It could be argued that the shutdown() should be done as part of
          ACE_OS::closesocket() (it already does this for HP-UX), but I